[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Field.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameManager.gd" type="Script" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Field" parent="." instance=ExtResource( 3 )]

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 20, 300 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 980, 300 )
player = 1

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 500, 300 )

[node name="ScoreLeft" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -6.0
margin_top = 9.0
margin_right = 506.0
margin_bottom = 41.0
text = "0"
align = 1
valign = 1

[node name="ScoreRight" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 503.0
margin_top = 14.0
margin_right = 1016.0
margin_bottom = 37.0
text = "0"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
